2011-01-20  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp (initialize): Assign results of Rf_install to avoid
	any risk of garbage collection -- with thaks to Doug and Luke

2010-12-26  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp (initialize): If Rcpp is requested, load it
	explicitly before we call autoload() for all R default packages
	(with thanks to Murray Stokely for the patch)

	* Changelog: Moved up from inst/ for easier C-x 4 a use

2010-08-06  Dirk Eddelbuettel  <edd@debian.org>

	* Release 0.2.3

	* src/Makevars: Set emacs header for Makefile mode
	* src/Makevars.win: Set emacs header for Makefile mode

2010-07-09  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/RInside.h: New argument to constructor to select
	loading of Rcpp
	* src/RInside.cpp: Idem, also load Rcpp more quietly

2010-07-05  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/standard/rinside_sample3.rcpp: Simpler with new Rcpp API
	* inst/examples/standard/rinside_sample4.rcpp: Idem

2010-06-16  Romain Francois <romain@r-enthusiasts.com>

	* inst/examples/standard/rinside_sample9.cpp: new example illustrating
	how to expose a C++ function to the embedded R

	* inst/examples/standard/rinside_module_sample0.cpp: new example illustrating
	how to use an Rcpp module from RInside

	* inst/include/*.h: moved the headers to include so that there is only one copy

	* inst/include/MemBuf.h: change from signature of add to use
	const std::string& instead of const char*

	* src/RInside.cpp: loading the Rcpp package

2010-04-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/MemBuf.cpp: Added #include <string.h> so that even Solaris sees
	  strlen() -- with thanks to Brian Ripley

	* src/Makefile: Remove -Wall option which Solaris cc does not
	  support -- with thanks to Brian Ripley

2010-04-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Add #ifdef to Callback code to break on Windows

2010-03-26  Romain Francois <romain@r-enthusiasts.com>
